Fixed horizontal scrolling :\

--- a/css/base.css
+++ b/css/base.css
@@ -23,7 +23,7 @@ p {
 
 #menu{
  height:30px; 
- width:100%;
+ width:90%;
  padding-left:10%;
  background-color:#3D3D3D;
  color: #CCCCCC;
